Delete overlay, added price
