# docs/openapi.yaml
@@ -462,9 +462,13 @@ paths:
             \u044B\u0445 \u0438\u0437\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\
             \u0439\n\nArgs:\n    list_id: \u0421\u043F\u0438\u0441\u043E\u043A ID\
             \ \u0438\u0437\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u0439 (\u043E\
-            \u0442 1 \u0434\u043E 12)\n\nReturns:\n    \u0424\u0430\u0439\u043B \u043A\
-            \u043E\u043B\u043B\u0430\u0436\u0430 \u0432 \u0444\u043E\u0440\u043C\u0430\
-            \u0442\u0435 JPEG"
+            \u0442 1 \u0434\u043E 12)\n    is_price: \u0424\u043B\u0430\u0433, \u0443\
+            \u043A\u0430\u0437\u044B\u0432\u0430\u044E\u0449\u0438\u0439, \u043D\u0443\
+            \u0436\u043D\u043E \u043B\u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u044F\
+            \u0442\u044C \u0446\u0435\u043D\u0443 \u043D\u0430 \u043E\u0432\u0435\u0440\
+            \u043B\u0435\u0439\n\nReturns:\n    \u0424\u0430\u0439\u043B \u043A\u043E\
+            \u043B\u043B\u0430\u0436\u0430 \u0432 \u0444\u043E\u0440\u043C\u0430\u0442\
+            \u0435 JPEG"
          operationId: create_collage_collage__get
          parameters:
          -  in: query
@@ -478,11 +482,11 @@ paths:
                title: List Id
                type: array
          -  in: query
-            name: is_overlay
+            name: is_price
             required: false
             schema:
                default: true
-               title: Is Overlay
+               title: Is Price
                type: boolean
          responses:
             '200':
@@ -517,7 +521,11 @@ paths:
             \u043E\u043B\u0447\u0430\u043D\u0438\u044E 12)\n    start_index: \u041D\
             \u0430\u0447\u0430\u043B\u044C\u043D\u044B\u0439 \u0438\u043D\u0434\u0435\
             \u043A\u0441 \u0434\u043B\u044F \u043E\u0431\u0440\u0430\u0431\u043E\u0442\
-            \u043A\u0438\n\nReturns:\n    \u0424\u0430\u0439\u043B \u043A\u043E\u043B\
+            \u043A\u0438\n    is_price: \u0424\u043B\u0430\u0433, \u0443\u043A\u0430\
+            \u0437\u044B\u0432\u0430\u044E\u0449\u0438\u0439, \u043D\u0443\u0436\u043D\
+            \u043E \u043B\u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C\
+            \ \u0446\u0435\u043D\u0443 \u043D\u0430 \u043E\u0432\u0435\u0440\u043B\
+            \u0435\u0439\n\nReturns:\n    \u0424\u0430\u0439\u043B \u043A\u043E\u043B\
             \u043B\u0430\u0436\u0430 \u0434\u043B\u044F \u0441\u043A\u0430\u0447\u0438\
             \u0432\u0430\u043D\u0438\u044F"
          operationId: create_batch_collage_collage_batch__get
@@ -540,11 +548,11 @@ paths:
                title: Start Index
                type: integer
          -  in: query
-            name: is_overlay
+            name: is_price
             required: false
             schema:
                default: true
-               title: Is Overlay
+               title: Is Price
                type: boolean
          responses:
             '200':
@@ -620,7 +628,11 @@ paths:
             \u0432\u043B\u044F\u0435\u0442 \u0434\u043B\u044F \u0441\u043A\u0430\u0447\
             \u0438\u0432\u0430\u043D\u0438\u044F\n\nArgs:\n    batch_size: \u0420\u0430\
             \u0437\u043C\u0435\u0440 \u043F\u0430\u043A\u0435\u0442\u0430 (\u043F\u043E\
-            \ \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E 12)\n\nReturns:\n\
+            \ \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E 12)\n    is_price:\
+            \ \u0424\u043B\u0430\u0433, \u0443\u043A\u0430\u0437\u044B\u0432\u0430\
+            \u044E\u0449\u0438\u0439, \u043D\u0443\u0436\u043D\u043E \u043B\u0438\
+            \ \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u0446\u0435\u043D\
+            \u0443 \u043D\u0430 \u043E\u0432\u0435\u0440\u043B\u0435\u0439\n\nReturns:\n\
             \    ZIP-\u0430\u0440\u0445\u0438\u0432 \u0441\u043E \u0432\u0441\u0435\
             \u043C\u0438 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u043C\u0438\
             \ \u043A\u043E\u043B\u043B\u0430\u0436\u0430\u043C\u0438"
@@ -636,11 +648,11 @@ paths:
                title: Batch Size
                type: integer
          -  in: query
-            name: is_overlay
+            name: is_price
             required: false
             schema:
                default: true
-               title: Is Overlay
+               title: Is Price
                type: boolean
          responses:
             '200':
